# xpu_graph

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  chores.yml  feature-request.yml
.github/workflows/: auto_release.yml  ci-for-mlu.yml  ci-for-npu.yml  ci.yml  demo.yml  lint_check.yml
docs/: RELEASE.md  RELEASE_CURRENT.md  update_release_note.sh
runtime/npu/super_kernel/: CMakeLists.txt  super_kernel_launcher.cpp.in
scripts/: build.py  check_updates_for_backends.sh  commit_msg_check.sh  install_githooks.sh  lint_check.sh
src/xpu_graph/: __init__.py  cache.py  compiler.py  config.py  constant_manager.py  debugger.py  device_graph_runner.py  fx_utils.py  guard_filters.py  interceptor.py  test_utils.py  utils.py  version.py
tests/: conftest.py  test_models.py  utils.py
tests/common/: __init__.py  test_aot_export.py  test_cache.py  test_change_tensor_like.py  test_combine_pointwise.py  test_combine_pointwise_cat.py  test_combine_pointwise_sink.py  test_combine_pointwise_source.py  test_combine_where_cat.py  test_compile_time.py  test_constant_fold.py  test_convert_gelu.py  test_convert_wheremask_to_mul.py  test_cse.py  test_custom_op.py  test_dynamic_shape.py  test_filter_pattern.py  test_fold_add.py  test_fold_cat.py  test_fold_clone.py  test_fold_div.py  test_fold_expand.py  test_fold_mul.py  test_fold_reduce.py  test_fold_slice_like.py  test_fold_squeeze.py  test_fold_stack.py  test_fold_sub.py  test_fold_to_copy.py  test_fold_view.py  test_fold_where.py  test_fuse_addmm.py  test_fuse_addn.py  test_fuse_baddbmm.py  test_fuse_batchdenselayer.py  test_fuse_denselayer.py  test_fuse_layernorm.py  test_fuse_rmsnorm.py  test_fuse_scale_layernorm.py  test_fuse_sdpa.py  (+22 more)
tests/mlu/: .test_combo_mul.py.swp  test_bmm_to_mulsum.py  test_cache.py  test_combo_matmul.py  test_combo_mm.py  test_combo_mul.py  test_combo_slice_where_cat.py  test_constant_fold_inductor.py  test_cppwrapper.py  test_custom_batchdenselayer.py  test_custom_denselayer.py  test_custom_layernorm.py  test_custom_rmsnorm.py  test_ddp_matmul.py  test_dist_train_utils.py  test_dist_utils.py  test_fast_batchdenselayer.py  test_fast_denselayer.py  test_fast_layernorm.py  test_fast_rmsnorm.py  test_flash_attention.py  test_fsdp_matmul.py  test_fuse_addlayernorm.py  test_fuse_densetower.py  test_fuse_dot_cat.py  test_fuse_mul_sum_cat.py  test_fuse_scale_layernorm.py  test_fuse_slice.py  test_fuse_slice_cat.py  test_fuse_slice_stack_sum.py  test_fuse_slice_where_cat.py  test_inference.py  test_interceptor.py  test_linear_attention.py  test_linear_to_matmul.py  test_linear_to_mm.py  test_mixedtype_layernorm.py  test_mlu_graph.py  test_mlu_graph_runner.py  test_numpy_float.py  (+10 more)
tests/npu/: conftest.py  test_acl_graph_mempool_reuse.py  test_add_layernorm.py  test_add_rmsnorm.py  test_aot_export_ge.py  test_base.py  test_compiled_fx_artifacts.py  test_convert_gemm_like_weights_ND2NZ.py  test_custom_rmsnorm.py  test_ddp_matmul.py  test_dist_utils.py  test_fast_layernorm.py  test_fast_rmsnorm.py  test_fsdp_matmul.py  test_fuse_div_mul_sum.py  test_fuse_permute_sum.py  test_npu_compilation_cache.py  test_npu_graph.py  test_npu_graph_runner.py  test_silu_mul.py  test_super_kernel_launcher.py  test_super_kernel_scope.py  test_tp_matmul.py
tests/xpu_ops/: test_convert_flash_attention.py  test_e2e.py
tools/linter/: black_linter.py  pip_init.py
xpu_graph/: __init__.py  cache.py  compiler.py  config.py  constant_manager.py  fx_utils.py  interceptor.py  monitors.py  test_utils.py  utils.py
(+209 files in other folders)
